[package]
name = "devlogs-feed"
version = "0.1.0"
edition = "2021"
default-run = "devlogs-feed"

[[bin]]
name = "devlogs-feed"
path = "src/main.rs"

[[bin]]
name = "score-post"
path = "src/bin/score_post.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2"
console = { version = "0.16", features = ["std"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15"
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rust-bert = "0.23.0"
simsimd = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skyfeed = "0.7.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
urlencoding = "2"
rayon = "1.10"
